2003-02-12  Zack Weinberg  <zack@codesourcery.com>

	* cpplib.c (do_include_common): Move warnings for
	#include_next and #import out to callers.  Use early-return
	instead of nested ifs.  Don't do check_eol here.
	(parse_include): Do check_eol here with the rest of the
	parsing stuff.
	(do_include_next, do_import): Now handle warnings.

2003-02-11  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/install.texi (Specific): Update AVR- and Darwin-related URLs.

Wed Feb 12 15:19:42 CET 2003  Jan Hubicka  <jh@suse.cz>

	* predict.c (estimate_probability):  Fix roundoff error.

2003-02-12  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (a peephole2): Don't handle 65535.
	(two peephole2): New.

2003-02-12  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (several peephole2): Replace
	find_regno_note with peep2_reg_dead_p.

2003-02-11  Richard Henderson  <rth@redhat.com>

	* gcse.c (lookup_set): Remove unused argument PAT.  Update
	both callers.

2003-02-11  Geoffrey Keating  <geoffk@apple.com>

	* diagnostic.c (real_abort): New.
	(diagnostic_report_diagnostic): Call real_abort on error.
	* diagnostic.h (diagnostic_abort_on_error): New.
	(struct diagnostic_context): Add abort_on_error field.
	* toplev.c (setup_core_dumping): New.
	(decode_d_option): Handle 'H' case.
	* doc/invoke.texi (Debugging Options): Document -dH.

2003-02-11  Nathanael Nerode  <neroden@gcc.gnu.org>

	* Makefile.in: Remove pointless setting of CXXFLAGS for dejagnu
	which refers to obsolete directories.

2003-02-11  Richard Henderson  <rth@redhat.com>

	* config/alpha/linux.h (TARGET_C99_FUNCTIONS): New.

Mon Oct 21 17:07:47 CEST 2002  Jan Hubicka  <jh@suse.cz>

	* i386.c (contains_128bit_aligned_vector_p): New function.
	(ix86_function_arg_boundary): Properly align vector modes.

2003-02-11  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa/xtensa.md (set_frame_ptr): Change rtl to set reg a7.
	* config/xtensa/xtensa.c (xtensa_reorg): Search for UNSPECV_SET_FP